Mon Oct 25 22:41:20 2010 arton
 * ruined/ruinmain.rb
	version 0.0.9 => 0.1.0
	convert file, variable's value and output into utf-8
Sun Oct 17 19:24:00 2010 arton	
 * ruined/ruinmain.rb
	version 0.0.8 => 0.0.9
	correct thread status (exchange nil and false)
Sun Oct 17 19:09:00 2010 arton
 * ruined/ruinmain.rb
	version 0.0.7 => 0.0.8	
	retuens thread-list
 * ruined/css/ruin.css	
	move style from main.html to here
 * ruined/html/main.html
	add thread list pane.
	adjust some styles.
Thu Oct 14 20:14:00 2010 arton	
 * ruined/ruinmain.rb
	version 0.0.5 => 0.0.7
	fix caller check
Wed Oct 13 22:39:00 2010 arton
 * ruined/ruinmain.rb
	version 0.0.5 => 0.0.6
	support multi-thread app (but very limited)
Wed Oct 13 21:01:00 2010 arton
 * Rakefile
	add BSDL into gem
 * ruined/html/main.html
	escape modified value
 * ruined/ruinmain.rb
	version 0.0.4 => 0.0.5
	escape stdout
	unescape modified value
Tue Oct 12 00:17:00 2010 arton	
 * BSDL
 * readme.txt
	license changed to dual (BSDL or (GPLv3 or later))
 * ruined/html/main.html
	support variable modification
 * ruined/ruinmain.rb
	support variable modification
Mon Oct 11 21:25:00 2010 arton		
 * lib/ruined/ruinmain.rb
	fix local vairable confliction with 'v'
	change version => 0.0.3 for new gem
Mon Oct 11 18:38:00 2010 arton	
 * lib/ruined/ruinmain.rb
	change version => 0.0.2 for new gem
Mon Oct 11 15:51:00 2010 arton
	start brwoser (suggested by knu and n0kada, thanks)
Mon Oct 11 01:37:00 2010 arton
	initial release